# ucas-scraper

./: .pre-commit-config.yaml  LICENSE  README.md  hello.py  pyproject.toml
.github/workflows/: pre-commit.yml
examples/: course.json
src/: acquire_course.py  acquire_courses_from_list.py  build_courses_from_file_cache.py  course.py  fetcher.py  historic_grades.py  output.py  parser.py  search.py
src/utils/: config.py  course_id_parser.py  output.py
src/utils/fetcher/: fetcher.py  fetcher_config.py  http_client.py  http_error.py
src/v1/: course_v1.py  historic_grades_v1.py  search.py
src/v1/utils/fetcher/: fetcher.py  http_client.py
src/v2/acquirers/: course_acquirer.py  historic_grades_acquirer.py
src/v2/builders/: course_builder.py
src/v2/models/: course.py  ucas_course.py
src/v2/scripts/: acquire_courses_from_list.py
src/v2/utils/fetcher/: http_client.py
src/v3/: README.md
src/v3/acquirers/: course.py  course_search.py  historic_grades.py
src/v3/builders/: course_builder.py  course_filter.py
src/v3/models/: course.py  ucas_course.py
src/v3/scripts/: 01_course_search.py  02_get_course_details.py  03_build_course_data.py  acquire_course_by_id.py
src/v3/utils/: config.py  file_handler.py  html_parser.py
src/v3/utils/fetcher/: fetcher_config.py  http_client.py  http_verb.py  response_handler.py
