[project]
name = "ucas-scraper"
version = "0.1.0"
description = "Fetch course data from the UCAS (the UK Universities and Colleges Admissions Service) website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "httpx[http2]>=0.27.2",
]

[dependency-groups]
dev = [
    "conventional-commits-check>=2.3.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.2",
]
